PDI-11079 : Improve the source code by using CheckStyle as a guideline + NON-NLS Cleanup