@@ -50,7 +50,7 @@ import org.pentaho.di.trans.steps.rowgenerator.RowGeneratorMeta;
 
 /**
  * Test class for the Constant step.
- * 
+ *
  * @author Sven Boden
  */
 public class ConstantTest extends TestCase {
@@ -59,26 +59,26 @@ public class ConstantTest extends TestCase {
     RowMetaInterface rm = new RowMeta();
     try {
       ValueMetaInterface[] valuesMeta =
-          {
-              ValueMetaFactory.createValueMeta( "boolean1", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean2", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean3", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean4", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean5", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean6", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "boolean7", ValueMetaInterface.TYPE_BOOLEAN ),
-              ValueMetaFactory.createValueMeta( "string1", ValueMetaInterface.TYPE_STRING ),
-              ValueMetaFactory.createValueMeta( "string2", ValueMetaInterface.TYPE_STRING ),
-              ValueMetaFactory.createValueMeta( "string3", ValueMetaInterface.TYPE_STRING ),
-              ValueMetaFactory.createValueMeta( "integer1", ValueMetaInterface.TYPE_INTEGER ),
-              ValueMetaFactory.createValueMeta( "integer2", ValueMetaInterface.TYPE_INTEGER ),
-              ValueMetaFactory.createValueMeta( "integer3", ValueMetaInterface.TYPE_INTEGER ),
-              ValueMetaFactory.createValueMeta( "integer4", ValueMetaInterface.TYPE_INTEGER ),
-              ValueMetaFactory.createValueMeta( "number1", ValueMetaInterface.TYPE_NUMBER ),
-              ValueMetaFactory.createValueMeta( "number2", ValueMetaInterface.TYPE_NUMBER ),
-              ValueMetaFactory.createValueMeta( "number3", ValueMetaInterface.TYPE_NUMBER ),
-              ValueMetaFactory.createValueMeta( "number4", ValueMetaInterface.TYPE_NUMBER ),
-              ValueMetaFactory.createValueMeta( "timestamp1", ValueMetaInterface.TYPE_TIMESTAMP ) };
+      {
+        ValueMetaFactory.createValueMeta( "boolean1", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean2", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean3", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean4", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean5", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean6", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "boolean7", ValueMetaInterface.TYPE_BOOLEAN ),
+        ValueMetaFactory.createValueMeta( "string1", ValueMetaInterface.TYPE_STRING ),
+        ValueMetaFactory.createValueMeta( "string2", ValueMetaInterface.TYPE_STRING ),
+        ValueMetaFactory.createValueMeta( "string3", ValueMetaInterface.TYPE_STRING ),
+        ValueMetaFactory.createValueMeta( "integer1", ValueMetaInterface.TYPE_INTEGER ),
+        ValueMetaFactory.createValueMeta( "integer2", ValueMetaInterface.TYPE_INTEGER ),
+        ValueMetaFactory.createValueMeta( "integer3", ValueMetaInterface.TYPE_INTEGER ),
+        ValueMetaFactory.createValueMeta( "integer4", ValueMetaInterface.TYPE_INTEGER ),
+        ValueMetaFactory.createValueMeta( "number1", ValueMetaInterface.TYPE_NUMBER ),
+        ValueMetaFactory.createValueMeta( "number2", ValueMetaInterface.TYPE_NUMBER ),
+        ValueMetaFactory.createValueMeta( "number3", ValueMetaInterface.TYPE_NUMBER ),
+        ValueMetaFactory.createValueMeta( "number4", ValueMetaInterface.TYPE_NUMBER ),
+        ValueMetaFactory.createValueMeta( "timestamp1", ValueMetaInterface.TYPE_TIMESTAMP ) };
       for ( int i = 0; i < valuesMeta.length; i++ ) {
         rm.addValueMeta( valuesMeta[i] );
       }
@@ -94,11 +94,11 @@ public class ConstantTest extends TestCase {
     RowMetaInterface rm = createResultRowMetaInterface();
 
     Object[] r1 =
-        new Object[] {
-            Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, null,
-            "AAAAAAAAAAAAAA", "   ", null, Long.valueOf( -100L ), Long.valueOf( 0L ), Long.valueOf( 212L ), null,
-            new Double( -100.2 ), new Double( 0.0 ), new Double( 212.23 ), null,
-            Timestamp.valueOf( "1970-01-01 00:00:00.000" ) };
+      new Object[] {
+        Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, Boolean.TRUE, Boolean.FALSE, Boolean.FALSE, null,
+        "AAAAAAAAAAAAAA", "   ", null, Long.valueOf( -100L ), Long.valueOf( 0L ), Long.valueOf( 212L ), null,
+        new Double( -100.2 ), new Double( 0.0 ), new Double( 212.23 ), null,
+        Timestamp.valueOf( "1970-01-01 00:00:00.000" ) };
 
     list.add( new RowMetaAndData( rm, r1 ) );
 
@@ -196,18 +196,19 @@ public class ConstantTest extends TestCase {
     ConstantMeta cnst1 = new ConstantMeta();
 
     String[] fieldName1 =
-        {
-            "boolean1", "boolean2", "boolean3", "boolean4", "boolean5", "boolean6", "boolean7", "string1", "string2",
-            "string3", "integer1", "integer2", "integer3", "integer4", "number1", "number2", "number3", "number4",
-            "timestamp1" };
+    {
+      "boolean1", "boolean2", "boolean3", "boolean4", "boolean5", "boolean6", "boolean7", "string1",
+      "string2", "string3", "integer1", "integer2", "integer3", "integer4", "number1", "number2", "number3",
+      "number4", "timestamp1" };
     String[] type1 =
-        {
-            "boolean", "Boolean", "bOOLEAN", "BOOLEAN", "boolean", "boolean", "boolean", "string", "string", "String",
-            "integer", "integer", "integer", "integer", "number", "number", "number", "number", "timestamp" };
+    {
+      "boolean", "Boolean", "bOOLEAN", "BOOLEAN", "boolean", "boolean", "boolean", "string", "string",
+      "String", "integer", "integer", "integer", "integer", "number", "number", "number", "number",
+      "timestamp" };
     String[] value1 =
-        {
-            "Y", "T", "a", "TRUE", "0", "9", "", "AAAAAAAAAAAAAA", "   ", "", "-100", "0", "212", "", "-100.2", "0.0",
-            "212.23", "", "1970-01-01 00:00:00.000" };
+    {
+      "Y", "T", "a", "TRUE", "0", "9", "", "AAAAAAAAAAAAAA", "   ", "", "-100", "0", "212", "", "-100.2",
+      "0.0", "212.23", "", "1970-01-01 00:00:00.000" };
     String[] fieldFormat1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "" };
     String[] group1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ",", ",", ",", ",", "" };
     String[] decimal1 = { "", "", "", "", "", "", "", "", "", "", "", "", "", "", ".", ".", ".", ".", "" };
@@ -215,9 +216,9 @@ public class ConstantTest extends TestCase {
     int[] intDummies1 = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
 
     boolean[] setEmptystring =
-        {
-            false, false, false, false, false, false, false, false, false, false, false, false, false, false, false,
-            false, false, false, false };
+    {
+      false, false, false, false, false, false, false, false, false, false, false, false, false, false,
+      false, false, false, false, false };
 
     cnst1.setFieldName( fieldName1 );
     cnst1.setFieldType( type1 );
